# sd-scripts

./: XTI_hijack.py  fine_tune.py  gen_img_diffusers.py  pyproject.toml  sdxl_gen_img.py  sdxl_minimal_inference.py  sdxl_train.py  sdxl_train_control_net_lllite.py  sdxl_train_control_net_lllite_old.py  sdxl_train_network.py  sdxl_train_textual_inversion.py  train_controlnet.py  train_db.py  train_network.py  train_textual_inversion.py  train_textual_inversion_XTI.py
bitsandbytes_windows/: main.py
finetune/: clean_captions_and_tags.py  make_captions.py  make_captions_by_git.py  merge_captions_to_metadata.py  merge_dd_tags_to_metadata.py  prepare_buckets_latents.py  tag_images_by_wd14_tagger.py
finetune/blip/: blip.py
networks/: check_lora_weights.py  control_net_lllite.py  control_net_lllite_for_train.py  dylora.py  extract_lora_from_dylora.py  extract_lora_from_models.py  lora.py  lora_diffusers.py  lora_fa.py  lora_interrogator.py  merge_lora.py  merge_lora_old.py  oft.py  resize_lora.py  sdxl_merge_lora.py  svd_merge_lora.py
tools/: cache_latents.py  cache_text_encoder_outputs.py  canny.py  convert_diffusers20_original_sd.py  detect_face_rotate.py  latent_upscaler.py  merge_models.py  original_control_net.py  resize_images_to_resolution.py  show_metadata.py
