[tool.poetry]
name = "sd-scripts"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "sd_scripts"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
torchvision = "^0.14.1"
accelerate = "0.15.0"
safetensors = "0.2.6"
easygui = "^0.98.3"
transformers = "4.25.1"
ftfy = "^6.1.1"
albumentations = "^1.3.0"
opencv-python = "^4.7.0.68"
einops = "^0.6.0"
diffusers = {version = "0.10.2", extras = ["torch"]}
pytorch-lightning = "^1.8.6"
bitsandbytes = "0.35.0"
tensorboard = "^2.11.0"
gradio = "^3.15.0"
altair = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
